2008-08-27  Hans Boehm <Hans.Boehm@hp.com> (with help from Marco Maggi)
	* doc/simple_example.html: Update thread-local allocation
	description.

2008-08-26  Hans Boehm <Hans.Boehm@hp.com> (with help from Marco Maggi)
	* configure.ac: Check for gc-debug earlier; replace remaining
	full-debug tests.
	* configure: Regenerate.
	* include/gc.h, ptr_chck.c (GC_pre_incr, GC_post_incr):
	Use signed offset type.  Use ptr_t internally.
	* doc/gcinterface.html: Update LOCAL_MALLOC description.
	* doc/README.autoconf, doc/leak.html, doc/README.DGUX386:
	Fix full-debug reference.
	* include/gc.h: Rewrite GC_..._INCR and friends.
	* tests/test.c: Minimally test GC_..._INCR and friends.

2008-08-21  Hans Boehm <Hans.Boehm@hp.com>
	* mark.c: (GC_push_next_marked, GC_push_next_marked_dirty,
	GC_push_next_marked_uncollectable): Never invoke GC_push_marked
	on free hblk.
	* headers.c: Test COUNT_HDR_CACHE_HITS not USE_HDR_CACHE.
	(GC_header_cache_miss): Always blacklist pointers for free
	hblks.  Add assertion and comment.
	* pthread_support.c (GC_register_my_thread): Fix #if indentation.
	* include/private/gc_hdrs.h: USE_HDR_CACHE is no longer tested.
	Delete it.
	* include/private/gc_pmark.h: (PUSH_OBJ): Add assertion.

2008-08-21  Hans Boehm <Hans.Boehm@hp.com>
	* alloc.c, include/gc_mark.h, Makefile.direct: Improve comments.

2008-08-01  Hans Boehm <Hans.Boehm@hp.com> (Really Klaus Treichel)
	* configure.ac: Set win32_threads on MinGW.
	* configure: Regenerate.

2008-07-25  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidanski)
	Ivan's description of the patch follows. Note that a few pieces like
	the GC_malloc(0) patch, were not applied since an alternate had been
	previously applied.  A few differed stylistically from the rest of
	the code (mostly casts to void * instead of target type),
	or were classified as too minor to bother.  Note that
	all of Ivan's static declarations which did not correct outright
	naming bugs (as a few did), where replaced by STATIC, which is